# cv-agents

./: .gitignore  .pdm-python  AGENTS.md  CLAUDE.md  Makefile  README.md  backend-dev-cv.json  clean.sh  config.py  cover-letter-template.tex  cover-letter-template.tex.jinja  cover-letter.json  cv-agents-faafo.ipynb  cv-agents.ipynb  cv-template.tex  cv-template.tex.jinja  cv.json  cv_agents.py  fill-cover-letter-template.py  fill-cv-template.py  fill-template.py  kickoff_crew.py  library-cv.json  main.sh  make-cover-letter.py  make-cv.py  models.py  pyproject.toml  pytest.ini  requirements.txt  run_crew.py  sample.env  setup.sh  target-cv.ipynb  template.tex  tree2pb.sh  tutorial.tex
collections/: cvs.json  job_postings.json
cv_optimizer/: __init__.py
data/: cover-letter.json  cv.json  cv.yaml
docs/: architecture-notes.md  architecture-todos.md  chat.md  crewai-assistant.md  migration-plan.md  progress.md
embedding_tool/: __init__.py  embedder.py  loaders.py
legacy/: cv-template.tex.jinja
notes/: cleanup-plan.md  cover-letter-notes.md  cover-letter-skeleton.md  draft  indeed  leg-questionnaire-questions.md  leg-resume-outline  mrs-davis  multiemployer-experience-items.md  multiemployer.md  upwork-profile.md  web-master.md  what-i-need-to-know-how-to-do  work-exp-gpt.md  work-experience  work-experience.md
optimizer/: agents.py  crew.py  fakers.py  kickoff.py  knowledge_embedder.py  main.py  models.py  tasks.py  vector_builder.py
optimizer_new/: agents.py  crew.py  crew_example.py  tasks.py
output/: cover-letter.tex  cv.tex
py/: main.sh  resume.json  script.py  template.tex
scripts/: build_vectordb.py  candidate_profiler_test.py  candidate_profiling_test.py  chroma_test.py  cv_alignment.py  cv_alignment_test.py  cv_analysis.py  cv_optimization.py  cv_optimization_test.py  cv_structuring.py  cv_transformation.py  embed_kb.py  inspect_chroma.py  inspect_rag_chunks.py  job_analysis.py  job_analysis_test.py  query_kb.py  rag_tool_query.py  rag_tool_test.py  semantic_search_tool_query.py  semantic_search_wrapper_check.py  test_chunky_kb_tool.py  test_chunky_rag_tool.py  test_llm.py  test_rag_tool.py  test_semantic_search_tool.py
src/ui/: app.py  (+3 more)
templates/: cover-letter-template.tex  cv-template.tex  cv.tex
(+115 files in other folders)
